update azalea code

--- a/src/ctqmc/azalea/Makefile
+++ b/src/ctqmc/azalea/Makefile
@@ -5,7 +5,8 @@ include ./make.sys
 default: all
 
 modm = mod_mpi.o mod_spring.o mod_stack.o
-modn = ctqmc_constants.o ctqmc_control.o ctqmc_context.o
+modc = ctqmc_constants.o ctqmc_control.o ctqmc_context.o
+modi = ctqmc_api.o
 dmft = ctqmc_dmft.o
 core = ctqmc_solver.o
 lev1 = ctqmc_flavor.o ctqmc_update.o
@@ -14,12 +15,15 @@ lev3 = ctqmc_fourier.o ctqmc_spline.o ctqmc_util.o
 dump = ctqmc_dump.o ctqmc_print.o
 main = ctqmc_main.o
 
-objects = $(modm) $(modn) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main)
+objects = $(modm) $(modc) $(modi) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main)
 
-all: ctqmc
+all: ctqmc_exe
 
-ctqmc: $(objects)
+ctqmc_exe: $(objects)
 	$(LINKER) $(objects) -o ctqmc $(LFLAGS) $(LIBS)
+
+ctqmc_lib: $(objects)
+	$(ARCHIVER) libctqmc.a $(objects)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
@@ -28,6 +32,7 @@ clean:
 	rm -f *.mod
 	rm -f *.o
 	rm -f ctqmc
+	rm -f libctqmc.a
 
 clean-dat:
 	rm -f *.dat
