--- a/src/ctqmc/pansy/Makefile
+++ b/src/ctqmc/pansy/Makefile
@@ -5,7 +5,7 @@ include ./make.sys
 default: all
 
 modm = mod_mpi.o mod_skynet.o mod_sparse.o mod_spring.o mod_stack.o
-modn = ctqmc_constants.o ctqmc_control.o ctqmc_context.o
+modn = ctqmc_constants.o ctqmc_control.o ctqmc_subspace.o ctqmc_context.o
 dmft = ctqmc_dmft.o
 core = ctqmc_solver.o
 lev1 = ctqmc_flavor.o ctqmc_update.o
