modify Makefile, not finish

--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -1,21 +1,10 @@
 .SUFFIXES: .f90
 
-include ./make.sys
+include ../build/make.sys
 
 default: all
 
-modm = mod_mpi.o mod_spring.o mod_stack.o
-modc = ctqmc_constants.o ctqmc_control.o ctqmc_context.o
-modi = ctqmc_api.o
-dmft = ctqmc_dmft.o
-core = ctqmc_solver.o
-lev1 = ctqmc_flavor.o ctqmc_update.o
-lev2 = ctqmc_record.o ctqmc_status.o ctqmc_stream.o
-lev3 = ctqmc_fourier.o ctqmc_spline.o ctqmc_util.o
-dump = ctqmc_dump.o ctqmc_print.o
-main = ctqmc_main.o
-
-objects = $(modm) $(modc) $(modi) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main)
+mod = mod_const.o mod_mpi.o mod_parser.o mod_skynet.o mod_sparse.o mod_spring.o mod_stack.o
 
 all: ctqmc_exe
 
