modify Makefile, implement it

--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -5,14 +5,15 @@ include ../build/make.sys
 default: all
 
 mod = mod_const.o mod_mpi.o mod_parser.o mod_skynet.o mod_sparse.o mod_spring.o mod_stack.o
+src =
+objects = $(mod) $(src)
 
-all: ctqmc_exe
+all: build_mod build_src build_lib
 
-ctqmc_exe: $(objects)
-	$(LINKER) $(objects) -o ctqmc $(LFLAGS) $(LIBS)
-
-ctqmc_lib: $(objects)
-	$(ARCHIVER) libctqmc.a $(objects)
+build_mod: $(mod)
+build_src: $(src)
+build_lib: $(objects)
+	$(ARCHIVER) libMM.a $(objects)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
@@ -20,8 +21,7 @@ ctqmc_lib: $(objects)
 clean:
 	rm -f *.mod
 	rm -f *.o
-	rm -f ctqmc
-	rm -f libctqmc.a
+	rm -f libMM.a
 
 clean-dat:
 	rm -f *.dat
