--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -4,7 +4,7 @@ include ../build/make.sys
 
 default: all
 
-mod = m_const.o m_mpi.o m_parser.o m_skynet.o m_sparse.o m_spring.o m_stack.o
+mod = m_const.o m_list.o m_mpi.o m_parser.o m_skynet.o m_sparse.o m_spring.o m_stack.o
 src = s_error.o s_fft.o s_math.o s_spline.o s_util.o
 objects = $(mod) $(src)
 
