--- a/src/tools/jasmine/Makefile
+++ b/src/tools/jasmine/Makefile
@@ -7,7 +7,7 @@ default: all
 modn = mod_constants.o mod_control.o mod_sector.o mod_global.o
 lev1 = atomic_util.o atomic_tran.o atomic_print.o atomic_config.o atomic_check.o atomic_gaunt.o atomic_read.o atomic_write.o atomic_basis.o
 lev2 = atomic_mksector.o atomic_mkspmat.o atomic_natural.o 
-lev3 = atomic_hmat.o atomic_fmat.o atomic_occu.o atomic_driver.o
+lev3 = atomic_hmat.o atomic_fmat.o atomic_occu.o atomic_test.o atomic_driver.o
 main = atomic_main.o
 
 objects = $(modn) $(lev1) $(lev2) $(lev3) $(main)
