try to implement m_parser.f90, in progress

--- a/src/common/solver.ctqmc.in
+++ b/src/common/solver.ctqmc.in
@@ -3,3 +3,8 @@ norbs : 24 ! sfdsf
 
 ! asdad
 # dddd
+
+  nspin : 2 #sdffddd
+ntime = 12 # sdffd ! sdddd
+
+npart            : 1 ! sdfsf # ssss $ fff
