--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -5,7 +5,7 @@ include ../build/make.sys
 default: all
 
 mod = m_constants.o m_linkedlist.o m_mpi.o m_parser.o m_skynet.o m_sparse.o m_spring.o m_stack.o
-sub = s_error.o s_fft.o s_math.o s_matrix.o s_spline.o s_util.o
+sub = s_error.o s_fft.o s_matrix.o s_spline.o s_util.o s_vector.o
 objects = $(mod) $(sub)
 
 all: build_mod build_sub build_lib
