add some comments in common/Makefile

--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -1,3 +1,17 @@
+##
+##
+## Introduction
+## ============
+##
+## Makefile for iqist/src/common
+##
+## Usage
+## =====
+##
+## 'make' or 'make clean'
+##
+##
+
 .SUFFIXES: .f90
 
 include ../build/make.sys
