--- a/src/ctqmc/azalea/Makefile
+++ b/src/ctqmc/azalea/Makefile
@@ -4,9 +4,7 @@ include ../../build/make.sys
 
 default: all
 
-modm = mod_mpi.o mod_spring.o mod_stack.o
-modc = ctqmc_constants.o ctqmc_control.o ctqmc_context.o
-modi = ctqmc_api.o
+modc = ctqmc_control.o ctqmc_context.o
 dmft = ctqmc_dmft.o
 core = ctqmc_solver.o
 lev1 = ctqmc_flavor.o ctqmc_update.o
@@ -15,19 +13,22 @@ lev3 = ctqmc_fourier.o ctqmc_spline.o ctqmc_util.o
 dump = ctqmc_dump.o ctqmc_print.o
 main = ctqmc_main.o
 
-objects = $(modm) $(modc) $(modi) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main)
+objects = $(modc) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main)
 
 all: ctqmc_exe
+
+api:
+	cp ../api/api.mod .
 
 cssl:
 
 csml:
-	cp ../../common/constants.mod
-	cp ../../common/mmpi.mod
-	cp ../../common/spring.mod
-	cp ../../common/stack.mod
+	cp ../../common/constants.mod .
+	cp ../../common/mmpi.mod .
+	cp ../../common/spring.mod .
+	cp ../../common/stack.mod .
 
-ctqmc_exe: $(objects)
+ctqmc_exe: csml $(objects)
 	$(LINKER) $(objects) -o ctqmc $(LFLAGS) $(LIBS)
 
 ctqmc_lib: $(objects)
