small changes for common/Makefile

--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -3,7 +3,7 @@
 ## Introduction
 ## ============
 ##
-## Makefile for iqist/src/common
+## Makefile for iqist/src/common directory
 ##
 ## Usage
 ## =====
