try to fix azalea/Makefile, add some comments

--- a/src/ctqmc/azalea/Makefile
+++ b/src/ctqmc/azalea/Makefile
@@ -1,4 +1,16 @@
-
+##
+##
+## Introduction
+## ============
+##
+## Makefile for iqist/src/ctqmc/azalea directory
+##
+## Usage
+## =====
+##
+## 'make', 'make lib', 'make clean', 'make clean-dat' or 'make clean-all'
+##
+##
 
 .SUFFIXES: .f90
 
