--- a/src/ctqmc/azalea/Makefile
+++ b/src/ctqmc/azalea/Makefile
@@ -20,13 +20,12 @@ modc = ctqmc_control.o ctqmc_context.o
 dmft = ctqmc_dmft.o
 core = ctqmc_solver.o
 lev1 = ctqmc_flavor.o ctqmc_update.o
-lev2 = ctqmc_record.o ctqmc_status.o ctqmc_stream.o
-lev3 = ctqmc_fourier.o ctqmc_spline.o ctqmc_util.o
-dump = ctqmc_dump.o ctqmc_print.o
+lev2 = ctqmc_record.o ctqmc_status.o ctqmc_stream.o ctqmc_util.o
+lev3 = ctqmc_dump.o ctqmc_print.o
 main = ctqmc_main.o
 MAPI = ctqmc_api.o libMM.a
 
-objects = $(modc) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main) $(MAPI)
+objects = $(modc) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(main) $(MAPI)
 
 default: all
 
