re-construct jasmine according to new CSSL, CSML, passed the tests

--- a/src/tools/jasmine/Makefile
+++ b/src/tools/jasmine/Makefile
@@ -1,21 +1,47 @@
+##
+##
+## Introduction
+## ============
+##
+## Makefile for iqist/src/tools/jasmine directory
+##
+## Usage
+## =====
+##
+## 'make', 'make lib', 'make clean', 'make clean-dat' or 'make clean-all'
+##
+##
+
 .SUFFIXES: .f90
 
-include ./make.sys
+include ../../build/make.sys
+
+
 
 default: all
 
-modn = mod_constants.o mod_control.o mod_sector.o mod_global.o
-lev1 = atomic_util.o atomic_tran.o atomic_print.o atomic_config.o atomic_check.o atomic_gaunt.o atomic_read.o atomic_write.o atomic_basis.o
+modn = atomic_control.o atomic_sector.o atomic_global.o
+lev1 = atomic_tran.o atomic_print.o atomic_config.o atomic_check.o atomic_gaunt.o atomic_read.o atomic_write.o atomic_basis.o
 lev2 = atomic_mksector.o atomic_mkspmat.o atomic_natural.o 
 lev3 = atomic_hmat.o atomic_fmat.o atomic_occu.o atomic_driver.o
 main = atomic_main.o
+MAPI = libMM.a
 
-objects = $(modn) $(lev1) $(lev2) $(lev3) $(main)
+objects = $(modn) $(lev1) $(lev2) $(lev3) $(main) $(MAPI)
 
-all: atomic
+default: all
 
-atomic: $(objects)
-	$(LINKER) $(objects) -o atomic $(LFLAGS) $(LIBS) 
+all: exe
+
+cssl:
+	cp ../../common/libMM.a .
+
+csml:
+	cp ../../common/constants.mod .
+
+exe: cssl csml atomic_exe
+atomic_exe: $(objects)
+	$(LINKER) $(objects) -o atomic $(LFLAGS) $(LIBS)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
@@ -24,11 +50,9 @@ clean:
 	rm -f *.mod
 	rm -f *.o
 	rm -f atomic
-	rm -f *genmod*
-	rm -f *.i90
+	rm -f libMM.a
+
 clean-dat:
 	rm -f *.dat
-	rm -f *.bin
+	rm -f *.bin.*
 	rm -f *.out
-
-clean-all: clean clean-dat
