--- a/working/standard/1a/solver.ctqmc.in
+++ b/working/standard/1a/solver.ctqmc.in
@@ -1,39 +1,45 @@
-==========================================================================
-AZALEA: continuous time quantum Monte Carlo quantum impurity solver
-==========================================================================
-2            ! non-self-consistent (1) or self-consistent mode (2)
-2            ! without symmetry    (1) or with symmetry   mode (2)
-1            ! spin projection, PM (1) or AFM             mode (2)
-2            ! without binning     (1) or with binning    mode (2)
+!!!-----------------------------------------------------------------------
+!!! source  : solver.ctqmc.in
+!!! solver  : azalea
+!!! purpose : to test ctqmc impurity solver
+!!! author  : li huang (email:huangli712@gmail.com)
+!!!-----------------------------------------------------------------------
+
+!!>>> setup general control flags
 --------------------------------------------------------------------------
-1            ! number of bands
-2            ! number of spin projection
-2            ! number of orbitals (= nband * nspin)
-4            ! number of atomic states
-20           ! maximum number of DMFT + CTQMC self-consistent iterations
+  isscf  : 2
+  issun  : 2
+  isspn  : 1
+  isbin  : 2
+
+!!>>> setup common variables for quantum impurity model
 --------------------------------------------------------------------------
-1.00         ! U : average Coulomb interaction
-1.00         ! Uc: intraorbital Coulomb interaction
-1.00         ! Uv: interorbital Coulomb interaction, Uv = Uc-2*Jz for t2g system
-0.00         ! Jz: Hund's exchange interaction in z axis (Jz = Js = Jp = J)
-0.00         ! Js: spin-flip term
-0.00         ! Jp: pair-hopping term
+  nband  : 1
+  nspin  : 2
+  norbs  : 2
+  ncfgs  : 4
+  niter  : 20
+  U      : 1.00
+  Uc     : 1.00
+  Uv     : 1.00
+  Jz     : 0.00
+  Js     : 0.00
+  Jp     : 0.00
+  mune   : 0.50
+  beta   : 8.00
+  part   : 0.50
+  alpha  : 0.70
+
+!!>>> setup common variables for quantum impurity solver
 --------------------------------------------------------------------------
-0.50         ! chemical potential or fermi level
-8.00         ! inversion of temperature
-0.50         ! coupling parameter t for Hubbard model
-0.70         ! mixing parameter for self-consistent engine
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-1024         ! maximum perturbation expansions order
-8193         ! maximum number of matsubara frequency
---------------------------------------------------------------------------
-128          ! maximum number of matsubara frequency sampling by quantum impurity solver
-1024         ! number of time slice
-20000        ! flip period for spin up and spin down states
-200000       ! maximum number of thermalization steps
-200000000    ! maximum number of quantum Monte Carlo sampling steps
-20000000     ! output period
-100000       ! clean update period
-100          ! how often to sampling the gmat and nmat
-100          ! how often to sampling the gtau and prob
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  mkink  : 1024
+  mfreq  : 8193
+  nfreq  : 128
+  ntime  : 1024
+  nflip  : 20000
+  ntherm : 200000
+  nsweep : 200000000
+  nwrite : 20000000
+  nclean : 100000
+  nmonte : 100
+  ncarlo : 100
