--- a/working/standard/1a/solver.ctqmc.in
+++ b/working/standard/1a/solver.ctqmc.in
@@ -1,19 +1,19 @@
 !!!-----------------------------------------------------------------------
 !!! source  : solver.ctqmc.in
-!!! solver  : azalea
+!!! solver  : ALL
 !!! purpose : to test ctqmc impurity solver
 !!! author  : li huang (email:huangli712@gmail.com)
 !!!-----------------------------------------------------------------------
 
 !!>>> setup general control flags
---------------------------------------------------------------------------
+!!------------------------------------------------------------------------
   isscf  : 2
   issun  : 2
   isspn  : 1
   isbin  : 2
 
 !!>>> setup common variables for quantum impurity model
---------------------------------------------------------------------------
+!!------------------------------------------------------------------------
   nband  : 1
   nspin  : 2
   norbs  : 2
@@ -31,7 +31,7 @@
   alpha  : 0.70
 
 !!>>> setup common variables for quantum impurity solver
---------------------------------------------------------------------------
+!!------------------------------------------------------------------------
   mkink  : 1024
   mfreq  : 8193
   nfreq  : 128
