--- a/working/standard/1g/solver.ctqmc.in
+++ b/working/standard/1g/solver.ctqmc.in
@@ -1,5 +1,5 @@
 !!!-----------------------------------------------------------------------
-!!! source  : solver.ctqmc.in
+!!! source  : 1g/solver.ctqmc.in
 !!! solver  : ALL
 !!! purpose : to test ctqmc impurity solver
 !!! author  : li huang (email:huangli712@gmail.com)
