try to improve Makefile to be in accord with azalea's standard, not finished

--- a/src/ctqmc/narcissus/Makefile
+++ b/src/ctqmc/narcissus/Makefile
@@ -1,3 +1,17 @@
+##
+##
+## Introduction
+## ============
+##
+## Makefile for iqist/src/ctqmc/narcissus directory
+##
+## Usage
+## =====
+##
+## 'make', 'make lib', 'make clean', 'make clean-dat' or 'make clean-all'
+##
+##
+
 .SUFFIXES: .f90
 
 include ./make.sys
