--- a/src/ctqmc/narcissus/Makefile
+++ b/src/ctqmc/narcissus/Makefile
@@ -14,23 +14,22 @@
 
 .SUFFIXES: .f90
 
-include ./make.sys
+include ../../build/make.sys
 
-default: all
-
-modm = mod_mpi.o mod_spring.o mod_stack.o
-modn = ctqmc_constants.o ctqmc_control.o ctqmc_context.o
+modc = ctqmc_control.o ctqmc_context.o
 dmft = ctqmc_dmft.o
 core = ctqmc_solver.o
 lev1 = ctqmc_flavor.o ctqmc_update.o
-lev2 = ctqmc_record.o ctqmc_status.o ctqmc_stream.o
-lev3 = ctqmc_fourier.o ctqmc_spline.o ctqmc_util.o
-dump = ctqmc_dump.o ctqmc_print.o
+lev2 = ctqmc_record.o ctqmc_status.o ctqmc_stream.o ctqmc_util.o
+lev3 = ctqmc_dump.o ctqmc_print.o
 main = ctqmc_main.o
+MAPI = ctqmc_api.o libMM.a
 
-objects = $(modm) $(modn) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main)
+objects = $(modc) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(main) $(MAPI)
 
-all: ctqmc
+default: all
+
+all: exe
 
 ctqmc: $(objects)
 	$(LINKER) $(objects) -o ctqmc $(LFLAGS) $(LIBS)
