--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.o
 *.a
 *.x
+*.so
 *.exe
 *.i90
 *.dat
@@ -12,7 +13,8 @@
 *.out
 *.pyf
 *.optrpt
-test.f90
 fort.*
+test.f90
+py_api.f90
 src/ctqmc/*/ctqmc
 .DS_Store
