try to modify begonia/Makefile, not finished

--- a/src/ctqmc/begonia/Makefile
+++ b/src/ctqmc/begonia/Makefile
@@ -1,3 +1,29 @@
+##
+##
+## Introduction
+## ============
+##
+## Makefile for iqist/src/ctqmc/begonia directory.
+##
+## Usage
+## =====
+##
+## 'make', 'make lib', 'make clean', 'make clean-dat' or 'make clean-all'
+##
+## Author
+## ======
+##
+## This building system is designed, created, implemented, and maintained by
+##
+## Li Huang // email: huangli712@gmail.com
+##
+## History
+## =======
+##
+## 09/26/2014 by li huang
+##
+##
+
 .SUFFIXES: .f90
 
 include ./make.sys
