modify hibiscus/entropy2/Makefile, implement the compiling system

--- a/src/tools/hibiscus/entropy2/Makefile
+++ b/src/tools/hibiscus/entropy2/Makefile
@@ -3,7 +3,7 @@
 ## Introduction
 ## ============
 ##
-## Makefile for iqist/src/tools/hibiscus/entropy1 directory.
+## Makefile for iqist/src/tools/hibiscus/entropy2 directory.
 ##
 ## Usage
 ## =====
@@ -26,23 +26,35 @@
 
 .SUFFIXES: .f90
 
-include ./make.sys
+include ../../../build/make.sys
 
-default: all
-
-modm = mod_constants.o mod_control.o mod_context.o
+modc = mod_control.o mod_context.o
 util = maxent_utils.o 
 lev1 = maxent_stream.o maxent_model.o
 lev2 = maxent_makeaw.o
 lev3 = maxent_driver.o
 dump = maxent_dump.o maxent_print.o
 main = maxent_main.o
+MAPI = libMM.a
 
-objects = $(modm) $(util) $(lev1) $(lev2) $(lev3) $(dump) $(main)
+objects = $(modc) $(util) $(lev1) $(lev2) $(lev3) $(dump) $(main) $(MAPI)
 
-all: maxent
+default: all
 
-maxent: $(objects)
+all: exe
+
+cssl:
+	cp ../../../common/libMM.a .
+
+csml:
+	cp ../../../common/constants.mod .
+	cp ../../../common/mmpi.mod .
+	cp ../../../common/spring.mod .
+	cp ../../../common/parser.mod .
+	cp ../../../common/linkedlist.mod .
+
+exe: cssl csml maxent-exe
+maxent-exe: $(objects)
 	$(LINKER) $(objects) -o maxent $(LFLAGS) $(LIBS)
 
 .f90.o:
@@ -52,9 +64,11 @@ clean:
 	rm -f *.mod
 	rm -f *.o
 	rm -f maxent
+	rm -f libMM.a
 
 clean-dat:
 	rm -f *.dat
+	rm -f *.bin
 	rm -f *.out
 
 clean-all: clean clean-dat
