--- a/src/tools/hibiscus/sac/Makefile
+++ b/src/tools/hibiscus/sac/Makefile
@@ -1,3 +1,29 @@
+##
+##
+## Introduction
+## ============
+##
+## Makefile for iqist/src/tools/hibiscus/sac directory.
+##
+## Usage
+## =====
+##
+## 'make' or 'make clean'
+##
+## Author
+## ======
+##
+## This building system is designed, created, implemented, and maintained by
+##
+## Li Huang // email: huangli712@gmail.com
+##
+## History
+## =======
+##
+## 09/30/2014 by li huang
+##
+##
+
 .SUFFIXES: .f90
 
 include ./make.sys
