--- a/src/tools/hibiscus/swing/Makefile
+++ b/src/tools/hibiscus/swing/Makefile
@@ -3,7 +3,7 @@
 ## Introduction
 ## ============
 ##
-## Makefile for iqist/src/tools/hibiscus/script directory.
+## Makefile for iqist/src/tools/hibiscus/swing directory.
 ##
 ## Usage
 ## =====
@@ -24,11 +24,20 @@
 ##
 ##
 
-swing:
+default: all
+
+all: exe
+
+exe: swing-fast
+swing-fast:
 	f2py -c --fcompiler=intelem --f90flags="-O3 -xHost" swing_fast.f90 -m swing_fast
 
 clean:
 	rm -f *.so
 	rm -f *.pyc
+
+clean-dat:
 	rm -f *.dat
 	rm -f *.out
+
+clean-all: clean clean-dat
