try to update the user guide

--- a/doc/guide/Makefile
+++ b/doc/guide/Makefile
@@ -26,12 +26,12 @@
 
 default: all
 
-all: fast_build
+all: fast
 
-fast_build:
+fast:
 	xelatex ug
 
-full_build:
+full:
 	xelatex ug
 	bibtex ug
 	xelatex ug
