--- a/src/ctqmc/gardenia/solver.ctqmc.in
+++ b/src/ctqmc/gardenia/solver.ctqmc.in
@@ -1,8 +1,8 @@
 isbin = 1
-isort = 5
-isvrt = 16
-nffrq = 10
+#isort = 5
+isvrt = 8
+nffrq = 12
 nbfrq = 1
 U = 4.0
-beta = 2.0
+beta = 5.0
 niter = 1
