modify Makefile to meet the requirement of new source codes

--- a/src/tools/jasmine/Makefile
+++ b/src/tools/jasmine/Makefile
@@ -16,14 +16,12 @@
 
 include ../../build/make.sys
 
-
-
 default: all
 
 modn = atomic_control.o atomic_context.o
-lev1 = atomic_tran.o atomic_print.o atomic_config.o atomic_check.o atomic_gaunt.o atomic_read.o atomic_write.o atomic_basis.o
-lev2 = atomic_mksector.o atomic_mkspmat.o atomic_natural.o 
-lev3 = atomic_hmat.o atomic_fmat.o atomic_occu.o atomic_driver.o
+lev1 = atomic_driver.o
+lev2 = atomic_basis.o atomic_stream.o
+lev3 = atomic_dump.o atomic_print.o
 main = atomic_main.o
 MAPI = libMM.a
 
