modify Makefile, add lib, clean-all targets

--- a/src/tools/jasmine/Makefile
+++ b/src/tools/jasmine/Makefile
@@ -3,12 +3,24 @@
 ## Introduction
 ## ============
 ##
-## Makefile for iqist/src/tools/jasmine directory
+## Makefile for iqist/src/tools/jasmine directory.
 ##
 ## Usage
 ## =====
 ##
 ## 'make', 'make lib', 'make clean', 'make clean-dat' or 'make clean-all'
+##
+## Author
+## ======
+##
+## This building system is designed, created, implemented, and maintained by
+##
+## Li Huang // email: huangli712@gmail.com
+##
+## History
+## =======
+##
+## 09/21/2014 by li huang
 ##
 ##
 
@@ -16,16 +28,15 @@
 
 include ../../build/make.sys
 
-default: all
-
-modn = atomic_control.o atomic_context.o
-lev1 = atomic_driver.o
-lev2 = atomic_basis.o atomic_stream.o
+modc = atomic_control.o atomic_context.o
+core = atomic_driver.o
+lev1 = atomic_full.o atomic_sector.o
+lev2 = atomic_stream.o atomic_util.o
 lev3 = atomic_dump.o atomic_print.o
 main = atomic_main.o
 MAPI = libMM.a
 
-objects = $(modn) $(lev1) $(lev2) $(lev3) $(main) $(MAPI)
+objects = $(modc) $(core) $(lev1) $(lev2) $(lev3) $(main) $(MAPI)
 
 default: all
 
@@ -39,9 +50,13 @@ csml:
 	cp ../../common/parser.mod .
 	cp ../../common/linkedlist.mod .
 
-exe: cssl csml atomic_exe
-atomic_exe: $(objects)
+exe: cssl csml atomic-exe
+atomic-exe: $(objects)
 	$(LINKER) $(objects) -o atomic $(LFLAGS) $(LIBS)
+
+lib: cssl csml atomic-lib
+atomic-lib: $(objects)
+	$(ARCHIVER) libatomic.a $(objects)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
@@ -50,9 +65,12 @@ clean:
 	rm -f *.mod
 	rm -f *.o
 	rm -f atomic
+	rm -f libatomic.a
 	rm -f libMM.a
 
 clean-dat:
 	rm -f *.dat
 	rm -f *.bin.*
 	rm -f *.out
+
+clean-all: clean clean-dat
