--- a/working/ctqmc/advanced/manjushaka/3a/atom.config.in
+++ b/working/ctqmc/advanced/manjushaka/3a/atom.config.in
@@ -9,7 +9,8 @@
 !!------------------------------------------------------------------------
 ! number of bands
   nband  : 3       
-
+  nmini : -1
+  nmaxi : 7
 ! good quantum numbers (GQNs)
 ! (1) without any GQNs, (2) N, (3) N,Sz, (4) N,Sz,PS, (5) N,Jz
   ictqmc : 4       
