--- a/working/tools/jasmine/7b/atom.config.in
+++ b/working/tools/jasmine/7b/atom.config.in
@@ -10,6 +10,10 @@
 ! number of bands
   nband  : 7       
 
+! minimal and maximal occupancy to be kept
+  nmini  : 0
+  nmaxi  : 5
+
 ! good quantum numbers (GQNs)
 ! (1) without any GQNs, (2) N, (3) N,Sz, (4) N,Sz,PS, (5) N,Jz
   ictqmc : 5       
