using vimdiff to compare pansy and begonia, update pansy according to begonia, finished

--- a/src/ctqmc/pansy/Makefile
+++ b/src/ctqmc/pansy/Makefile
@@ -10,13 +10,25 @@
 ##
 ## 'make', 'make lib', 'make clean', 'make clean-dat' or 'make clean-all'
 ##
+## Author
+## ======
+##
+## This building system is designed, created, implemented, and maintained by
+##
+## Li Huang // email: huangli712@gmail.com
+##
+## History
+## =======
+##
+## 09/26/2014 by li huang
+##
 ##
 
 .SUFFIXES: .f90
 
 include ../../build/make.sys
 
-modc = ctqmc_control.o ctqmc_context.o 
+modc = ctqmc_control.o ctqmc_context.o
 dmft = ctqmc_dmft.o
 core = ctqmc_solver.o
 lev1 = ctqmc_flavor.o ctqmc_update.o
@@ -46,12 +58,12 @@ csml:
 	cp ../../common/parser.mod .
 	cp ../../common/linkedlist.mod .
 
-exe: api cssl csml ctqmc_exe
-ctqmc_exe: $(objects)
+exe: api cssl csml ctqmc-exe
+ctqmc-exe: $(objects)
 	$(LINKER) $(objects) -o ctqmc $(LFLAGS) $(LIBS)
 
-lib: api cssl csml ctqmc_lib
-ctqmc_lib: $(objects)
+lib: api cssl csml ctqmc-lib
+ctqmc-lib: $(objects)
 	$(ARCHIVER) libctqmc.a $(objects)
 
 .f90.o:
