--- a/tutor/t912/u15/solver.ctqmc.in
+++ b/tutor/t912/u15/solver.ctqmc.in
@@ -1,39 +1,45 @@
-==========================================================================
-AZALEA: continuous time quantum Monte Carlo quantum impurity solver
-==========================================================================
-2            ! non-self-consistent (1) or self-consistent mode (2)
-2            ! without symmetry    (1) or with symmetry   mode (2)
-1            ! spin projection, PM (1) or AFM             mode (2)
-1            ! without binning     (1) or with binning    mode (2)
---------------------------------------------------------------------------
-1            ! number of bands
-2            ! number of spin projection
-2            ! number of orbitals (= nband * nspin)
-4            ! number of atomic states
-20           ! maximum number of DMFT + CTQMC self-consistent iterations
---------------------------------------------------------------------------
-1.50         ! U : average Coulomb interaction
-1.50         ! Uc: intraorbital Coulomb interaction
-1.50         ! Uv: interorbital Coulomb interaction, Uv = Uc-2*Jz for t2g system
-0.00         ! Jz: Hund's exchange interaction in z axis (Jz = Js = Jp = J)
-0.00         ! Js: spin-flip term
-0.00         ! Jp: pair-hopping term
---------------------------------------------------------------------------
-0.75         ! chemical potential or fermi level
-40.0         ! inversion of temperature
-0.50         ! coupling parameter t for Hubbard model
-0.70         ! mixing parameter for self-consistent engine
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-1024         ! maximum perturbation expansions order
-8193         ! maximum number of matsubara frequency
---------------------------------------------------------------------------
-128          ! maximum number of matsubara frequency sampling by quantum impurity solver
-1024         ! number of time slice
-20000        ! flip period for spin up and spin down states
-200000       ! maximum number of thermalization steps
-20000000     ! maximum number of quantum Monte Carlo sampling steps
-2000000      ! output period
-100000       ! clean update period
-100          ! how often to sampling the gmat and nmat
-100          ! how often to sampling the gtau and prob
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+!!!-----------------------------------------------------------------------
+!!! source  : t912/u15/solver.ctqmc.in
+!!! solver  : azalea
+!!! purpose : for tutorial
+!!! author  : yilin wang (email:qhwyl2006@126.com)
+!!!-----------------------------------------------------------------------
+
+!!>>> setup general control flags
+!!------------------------------------------------------------------------
+  isscf  : 2
+  issun  : 2
+  isspn  : 1
+  isbin  : 1
+
+!!>>> setup common variables for quantum impurity model
+!!------------------------------------------------------------------------
+  nband  : 1
+  nspin  : 2
+  norbs  : 2
+  ncfgs  : 4
+  niter  : 20
+  U      : 1.50
+  Uc     : 1.50
+  Uv     : 1.50
+  Jz     : 0.00
+  Js     : 0.00
+  Jp     : 0.00
+  mune   : 0.75
+  beta   : 40.0
+  part   : 0.50
+  alpha  : 0.70
+
+!!>>> setup common variables for quantum impurity solver
+!!------------------------------------------------------------------------
+  mkink  : 1024
+  mfreq  : 8193
+  nfreq  : 128
+  ntime  : 1024
+  nflip  : 20000
+  ntherm : 200000
+  nsweep : 20000000
+  nwrite : 2000000
+  nclean : 100000
+  nmonte : 100
+  ncarlo : 100
